--- a/Android Studio Project/EmergencyHelper/app/src/main/res/values/strings.xml
+++ b/Android Studio Project/EmergencyHelper/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Emergency Helper</string>
     <string name="title_activity_maps">Map</string>
+    <string name="menu_configuracoes">Configurações</string>
 </resources>
