Adicionado: - Chaves do google maps para os outros desenvolvedores do projeto - Layout de um item de telefone - Activity da lista de telefones importantes

--- a/Android Studio Project/EmergencyHelper/app/src/main/res/values/strings.xml
+++ b/Android Studio Project/EmergencyHelper/app/src/main/res/values/strings.xml
@@ -2,4 +2,11 @@
     <string name="app_name">Emergency Helper</string>
     <string name="title_activity_maps">Map</string>
     <string name="menu_configuracoes">Configurações</string>
+    <string name="menu_hospitais">Hospitais</string>
+    <string name="menu_telefones">Telefones úteis</string>
+    <string name="telefone_policia_militar">190</string>
+    <string name="telefone_policia_rodoviaria_federal">191</string>
+    <string name="telefone_samu">192</string>
+    <string name="telefone_corpo_de_bombeiros">193</string>
+    <string name="title_activity_maps1">Map</string>
 </resources>
