--- a/Android Studio Project/EmergencyHelper/app/src/main/res/values/strings.xml
+++ b/Android Studio Project/EmergencyHelper/app/src/main/res/values/strings.xml
@@ -6,4 +6,8 @@
     <string name="menu_telefones">Telefones úteis</string>
     <string name="title_activity_maps1">Map</string>
 
+    <string name="count_down_call">
+        Chamando ajuda em \n
+    </string>
+
 </resources>
